<resources>
    <string name="app_name">RoadSafe</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Welcome!</string>
    <string name="start_pedestrian">I\'m a pedestrian</string>
    <string name="start_motorist">I\'m a motorist</string>
    <string name="warning_system_description">To the RoadSafe Realtime risk assesment system</string>
    <string name="danger_meter">DANGER METER</string>
    <string name="risk_factor_requested">Risk Factor requested</string>
    <string name="info_panel_description">Historical accident Statistics for this hour (1km radius)</string>
    <string name="refresh">Refresh</string>
    <string name="select_mode">Please select a mode below to help us customize your experience</string>
    <string name="consider_time_of_day">Consider time of day</string>
    <string name="no_internet_connect">Internet Connection not available</string>
    <string name="track_current_location">Track current location</string>
</resources>
