<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="client.roadsafe.org.roadsafe.StartActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/warning_system_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:text="@string/select_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/ic_walk_black_48dp"
            android:id="@+id/start_mode_pedestrian"
            android:textSize="24sp"
            android:text="@string/start_pedestrian"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <Button
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/ic_car_black_48dp"
            android:layout_marginTop="10dp"
            android:id="@+id/start_mode_motorist"
            android:text="@string/start_motorist"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_height="100dp" />
    </LinearLayout>
</RelativeLayout>
