<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.roadsafe.org.roadsafe.MapsActivity" >
    <android.support.v7.widget.CardView
        android:id="@+id/navigation_control_view"
        android:layout_weight="0"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:elevation="14dp"
        >
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/track_current_location_switch"
                android:checked="true"
                android:textStyle="bold"
                android:text="@string/track_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <fragment
        android:layout_weight="1"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:background="@color/cardview_dark_background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/hour_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:id="@+id/risk_factor_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_weight="0"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:elevation="14dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@color/colorWarning"
                android:id="@+id/card_recommendation"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:visibility="gone"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:elevation="14dp">
                <FrameLayout
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/recommendation_text"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Area has a chance for an accident"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
            </android.support.v7.widget.CardView>
            <Switch
                android:layout_marginBottom="10dp"
                android:id="@+id/time_of_day"
                android:checked="true"
                android:text="@string/consider_time_of_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/fatal_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:id="@+id/skull"
                    android:src="@drawable/ic_skull_grey600_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/fatal_count"
                    android:textSize="@dimen/stats_font_size"
                    android:textStyle="bold"
                    android:text="Loading Statistics..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:src="@drawable/ic_hospital_building_grey600_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/injured_count"
                    android:textSize="@dimen/stats_font_size"
                    android:textStyle="bold"
                    android:text="Loading Statistics..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:src="@drawable/ic_car_grey600_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/property_damage"
                    android:textSize="@dimen/stats_font_size"
                    android:textStyle="bold"
                    android:text="Loading Statistics..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:visibility="gone"
                android:id="@+id/cmd_refresh"
                android:text="@string/refresh"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/offline_status_indicator"
        android:background="@color/red"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/no_internet_connect"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>

